[tool.poetry]
name = "todobom-fileserver"
version = "0.1.0"
description = ""
authors = ["Yosi Arbiv <yosia@kovrr.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
